feat: Implement core post management and display system with urgent news features, admin tools, and utility functions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,42 @@
 			name="description"
 			content="Portal de notícias de Santa Catarina com foco em informação local, política, economia e opinião. Comprometido com a verdade e a transparência."
 		/>
+		<link rel="canonical" href="https://www.opineagorasc.com.br" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.opineagorasc.com.br" />
+		<meta
+			property="og:title"
+			content="Opine Agora SC - Opinião com Credibilidade"
+		/>
+		<meta
+			property="og:description"
+			content="Portal de notícias de Santa Catarina com foco em informação local, política, economia e opinião. Comprometido com a verdade e a transparência."
+		/>
+		<meta
+			property="og:image"
+			content="https://www.opineagorasc.com.br/opineagorasc-ogimage.png"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:url"
+			content="https://www.opineagorasc.com.br"
+		/>
+		<meta
+			property="twitter:title"
+			content="Opine Agora SC - Opinião com Credibilidade"
+		/>
+		<meta
+			property="twitter:description"
+			content="Portal de notícias de Santa Catarina com foco em informação local, política, economia e opinião. Comprometido com a verdade e a transparência."
+		/>
+		<meta
+			property="twitter:image"
+			content="https://www.opineagorasc.com.br/opineagorasc-ogimage.png"
+		/>
 
 		<!-- DNS Prefetch -->
 		<link rel="dns-prefetch" href="//fonts.googleapis.com" />
